2025-03-25 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle SIGUSR1 only after config parsing (closes: #181)

2025-03-23 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix parsing of invalid time values
	* Fix locking of wrong node
	* Fix writing of negative time values
	* Fix listing of attributes
	* Improve logging
	* Fix missing parent directory in path check output

2025-03-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove no longer needed caching code
	* Fix deadlock when using some special attributes

2025-03-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Open files for reading only after rule tree matching
	* Fix compilation when O_PATH is not defined

2025-03-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'version_ge' boolean operator (closes: #83)

2025-03-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Use O_NONBLOCK when opening files
	* Add AIDE_VERSION macro variable

2025-03-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Escape further special characters in JSON strings (closes: #189)

2025-03-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Minor code improvements and code cleanup
	* Properly close file descriptors of included config files
	* Improve some logging

2025-03-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add support for file system type restricted rules (Linux only)
	  - add 'fstype' attribute
	  - add '--without-fstype' configure option
	  - closes: #39

2025-02-23 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix omission of file type in database report section

2025-02-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Apply rules only to file system entries and no longer to database
	  entries
	* Fix available hashsums in --version output when using
	  libgcrypt (closes: #187)
	* Fix display of unknown file type in detailed report section

2025-02-22 yixiangzhike <yixiangzhike007@163.com>
	* Remove deprecated hashsums from default config option database_attrs
