@@ -1,5 +1,6 @@
 2025-03-25 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Handle SIGUSR1 only after config parsing (closes: #181)
+	* Require nettle >= 3.7 and libselinux >= 3.4
 
 2025-03-23 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Fix parsing of invalid time values
